--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@ https://www.tooplate.com/view/2127-little-fashion
 
                                     <p class="lead text-white mt-lg-3 mb-lg-5">Tooplate is one of the best HTML CSS template websites for everyone.</p>
 
-                                    <a href="contact.html" class="btn custom-btn">Work with us</a>
+                                    <a href="contact.html" class="btn custom-btn">Work with Kossi</a>
                                 </div>
                             </div>
                         </div>
