--- a/contact.html
+++ b/contact.html
@@ -96,7 +96,7 @@ https://www.tooplate.com/view/2127-little-fashion
 
                         <div class="col-lg-10 col-12 header-info">
                             <h1>
-                                <span class="d-block text-primary">Say hello to us</span>
+                                <span class="d-block text-primary">Say hello to Kossi</span>
                                 <span class="d-block text-dark">love to hear you</span>
                             </h1>
                         </div>
